--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:background="#F5F5F5">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,9 +25,9 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="30dp"
                 android:fontFamily="@font/dongle"
-                android:text="@string/welcome_juan_m_dela_cruz"
+                android:text="Welcome!"
                 android:textColor="@android:color/black"
-                android:textSize="20sp"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -42,23 +43,17 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
-                android:id="@+id/search_bar"
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/search_view"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/rounded_search_background"
-                android:drawableStart="@drawable/ic_search"
-                android:fontFamily="@font/dongle"
-                android:hint="@string/search_what_s_happening"
-
-                android:paddingStart="16dp"
-                android:paddingEnd="12dp"
-                android:textSize="24sp"
+                app:iconifiedByDefault="false"
+                app:queryHint="Search what's happening..."
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/user_avatar" />
 
@@ -69,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="24dp"
             android:fontFamily="@font/dongle"
             android:text="@string/urgent_needs"
             android:textSize="26sp"
@@ -99,6 +94,7 @@
                 style="@style/UrgentNeedTagStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:fontFamily="@font/dongle"
                 android:text="Food"
                 android:textSize="20sp" />
@@ -108,6 +104,7 @@
                 style="@style/UrgentNeedTagStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:fontFamily="@font/dongle"
                 android:text="Relief Packs"
                 android:textSize="20sp" />
@@ -120,20 +117,19 @@
                 android:fontFamily="@font/dongle"
                 android:text="Hygiene Kits"
                 android:textSize="20sp" />
-
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="200dp"
             android:layout_margin="16dp"
-            app:cardCornerRadius="12dp"  app:cardElevation="4dp">     <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/image_carousel_view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:padding="0dp" />
+            app:cardCornerRadius="12dp"
+            app:cardElevation="4dp">
 
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/image_carousel_view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
         </androidx.cardview.widget.CardView>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -141,10 +137,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:nestedScrollingEnabled="false"
-            android:layout_marginTop="16dp"
-            android:clipToPadding="false"
+            android:layout_marginTop="8dp"
             android:paddingBottom="80dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:clipToPadding="false"
             tools:listitem="@layout/item_announcement_card" />
 
     </LinearLayout>
