--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   >
+    android:background="#F5F5F5">
 
     <TextView
         android:id="@+id/tv_title"
@@ -20,7 +20,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <View android:id="@+id/divider" android:layout_width="match_parent" android:layout_height="1dp" android:background="#44000000" android:layout_marginTop="4dp" android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:layout_constraintTop_toBottomOf="@id/tv_title" />
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#44000000"
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -36,30 +44,36 @@
             android:paddingBottom="80dp">
 
             <TextView
+                android:id="@+id/tv_header_new"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/earlier"
+                android:text="New"
+                android:textColor="#27869B"
                 android:textStyle="bold"
+                android:textSize="18sp"
                 android:layout_marginStart="24dp"
                 android:layout_marginBottom="8dp"/>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_earlier"
+                android:id="@+id/rv_new"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false"/>
 
             <TextView
+                android:id="@+id/tv_header_old"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/yesterday"
+                android:text="Old"
+                android:textColor="#666666"
                 android:textStyle="bold"
+                android:textSize="18sp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="8dp"/>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_yesterday"
+                android:id="@+id/rv_old"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false"/>
@@ -70,7 +84,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="24dp"
                 android:text="@string/see_previous_notifications"
-                android:backgroundTint="#27869B"/>
+                android:backgroundTint="#27869B"
+                android:visibility="gone"/>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
